--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="materials-img">
           <img src="#" width="" height="" alt="Материалы на любой вкус">
         </div>
+        <span class="new">new</span>
       </div>
       <div class="tools">
         <p>Инструменты</p>
@@ -111,7 +112,6 @@
           </div>
         </div>
       </div>
-
     </section>
 
     <section class="popular-goods">
@@ -195,8 +195,8 @@
           <span class="perforators-title">Перфоратор BOSCH BFG 2000</span>
         </div>
         <a class="btn" href="#">12500 Р.</a>
-      </article>
-          
+        <span class="new">new</span>
+      </article>      
     </section>
 
     <section class="popular-producers">
@@ -232,11 +232,70 @@
       </article>
     </section>
 
+    <section class="service">
+      <h2>Сервисы</h2>
+      <p class="description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+
+    </section>
+
+    <section class="about-us">
+      <h2>Компания «ТЕХНОМАРТ»</h2>
+      <p class="description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
+      <p class="description">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+      <ul class="delivery-companies">
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭскпедиция</li>
+      </ul>
+      <a href="#" class="btn">Подробнее о компании</a>
+    </section>
+
+    <section class="contacts">
+      <h2>Контакты</h2>
+      <p class="description">Вы можете забрать товар сами, заехав в наш офис:</p>
+      <div class="map-img">
+        <img src="#" width="" height="" alt="Наш адрес">
+      </div>
+      <a href="#" class="btn">Заблудились? Напишите нам!</a>
+    </section>
   </main>
 
-
-
-
+  <footer class="main-footer">
+    <div class="footer-top">
+      <a class="main-logo-footer">
+        <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+      </a>
+      <p class="address-footer">г. Санкт-Петербург, уд. Б.Конюшенная, д. 19/8<br>
+      +7 (812) 555-05-55</p>
+      <ul class="site-navigation">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="site-navigation-footer">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p class="copyright">&copy; 2010-2019 Компания «Техномарт»<br>
+      Все права защищены</p>
+      <ul class="social">
+        <li><a class="social-btn" href="#">Вконтакте</a></li>
+        <li><a class="social-btn" href="#">Фейсбук</a></li>
+        <li><a class="social-btn" href="#">Инстаграм</a></li>
+      </ul>
+      <p class="feedback">Обратная связь:<br>
+      <span class="yellow-text">mail@htmlacademy.ru</span>
+      </p>
+      <p class="feedback">Разработано -<br>
+        <a href="https://htmlacademy.ru/intensive/htmlcss" class="yellow-text">htmlacademy.ru</a>
+      </p>
+    </div>
+  </footer>
 </body>
-
 </html>
