--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="title-description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <div class="header-contacts">
           <p class="phone-number">+7 (812) 555-05-55</p>
-          <p class="address">г. Санкт-Петербург, уд. Б.Конюшенная, д. 19/8</p>
+          <p class="address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <ul class="user-info">
           <li class="login">Войти</li>
@@ -254,7 +254,7 @@
         <a class="main-logo-footer">
           <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
-        <p class="address-footer">г. Санкт-Петербург, уд. Б.Конюшенная, д. 19/8
+        <p class="address-footer">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8
         +7 (812) 555-05-55</p>
         <ul class="site-navigation">
           <li><a href="#">Компания</a></li>
@@ -270,10 +270,9 @@
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div> 
-      
+
       <div class="footer-bottom">
-        <p class="copyright">&copy; 2010-2019 Компания «Техномарт»
-        Все права защищены</p>
+        <p class="copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social">
           <li><a class="social-btn social-btn-vk" href="#">Вконтакте</a></li>
           <li><a class="social-btn social-btn-fb" href="#">Фейсбук</a></li>
