--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <title>Каталог</title>
   </head>
   <body>
     <header class="main-header">
       <div class="header-top">
         <a class="main-logo">
-          <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <form class="form-search" action="#" method="GET">
           <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -105,7 +106,7 @@
           <div class="products-list">
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 3000</h3>
               <span class="product-old-price">22500 Р.</span>
@@ -118,7 +119,7 @@
 
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 6000</h3>
               <span class="product-old-price">30500 Р.</span>
@@ -131,7 +132,7 @@
 
             <article class="product product-new">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
               <a class="product-btn" href="#">12500 Р.</a>
@@ -143,7 +144,7 @@
 
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 3000</h3>
               <span class="product-old-price">22500 Р.</span>
@@ -156,7 +157,7 @@
 
             <article class="product product-new">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 6000</h3>
               <span class="product-old-price">30500 Р.</span>
@@ -169,7 +170,7 @@
 
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
               <a class="product-btn" href="#">12500 Р.</a>
@@ -181,7 +182,7 @@
 
             <article class="product product-new">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 3000</h3>
               <span class="product-old-price">22500 Р.</span>
@@ -194,7 +195,7 @@
 
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 6000</h3>
               <span class="product-old-price">30500 Р.</span>
@@ -207,7 +208,7 @@
 
             <article class="product">
               <div class="product-image">
-                <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
               <a class="product-btn" href="#">12500 Р.</a>
@@ -237,7 +238,7 @@
     <footer class="main-footer">
       <div class="footer-top">
         <a class="main-logo-footer">
-          <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <p class="address-footer">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8
         +7 (812) 555-05-55</p>
