--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <div class="header-top">
         <a class="main-logo">
-          <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <form class="form-search" action="#" method="GET">
           <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -80,13 +80,13 @@
               <div class="promo-slide-first">
                 <p class="promo-slider-title">Перфораторы</p>
                 <span class="promo-slider-description">Настоящие мужские игрушки</span>
-                <img src="#" width="" height="" alt="Перфораторы">
+                <img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">
                 <a class="promo-slider-btn" href="#">Открыть каталог</a>
               </div>
               <div class="promo-slide-second">
                 <p class="promo-slider-title">Дрели</p>
                 <span class="promo-slider-description">Соседям на радость!</span>
-                <img src="#" width="" height="" alt="Дрели">
+                <img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">
                 <a class="promo-slider-btn" href="#">Открыть каталог</a>
               </div>  
             </div>
@@ -103,7 +103,7 @@
         <div class="products-list">
           <article class="product">
             <div class="product-image">
-              <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/bfg-9000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </div>
             <h3 class="product-title">Перфоратор BOSCH BFG 9000</h3>
             <span class="product-old-price">32500 Р.</span>
@@ -116,7 +116,7 @@
 
           <article class="product">
             <div class="product-image">
-              <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </div>
             <h3 class="product-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="product-old-price">22500 Р.</span>
@@ -129,7 +129,7 @@
 
           <article class="product">
             <div class="product-image">
-              <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </div>
             <h3 class="product-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="product-old-price">30500 Р.</span>
@@ -142,7 +142,7 @@
 
           <article class="product product-new">
             <div class="product-image">
-              <img src="#" width="" height="" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </div>
             <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
             <a class="product-btn" href="#">12500 Р.</a>
@@ -161,28 +161,28 @@
         </div>
         <article class="producers">
           <div class="producers-img">
-            <img src="#" width="" height="" alt="BOSCH">
+            <img src="img/bosch.png" width="126" height="37" alt="BOSCH">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="Makita">
+            <img src="img/makita.png" width="123" height=40"" alt="Makita">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="DeWalt">
+            <img src="img/dewalt.png" width="146" height="44" alt="DeWalt">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="Интерскол">
+            <img src="img/interskol.png" width="200" height="88" alt="Интерскол">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="Hitachi">
+            <img src="img/hitachi.png" width="169" height="31" alt="Hitachi">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="LG">
+            <img src="img/lg.png" width="121" height="73" alt="LG">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="AEG">
+            <img src="img/aeg.png" width="151" height="96" alt="AEG">
           </div>
           <div class="producers-img">
-            <img src="#" width="" height="" alt="Metabo">
+            <img src="img/metabo.png" width="204" height="69" alt="Metabo">
           </div>      
         </article>
       </section>
@@ -242,7 +242,7 @@
           <h2>Контакты</h2>
           <p class="description">Вы можете забрать товар сами, заехав в наш офис:</p>
           <div class="map-img">
-            <img src="#" width="" height="" alt="Наш адрес">
+            <img src="img/map.png" width="300" height="158" alt="Наш адрес">
           </div>
           <a href="#" class="btn">Заблудились? Напишите нам!</a>
         </section>
@@ -252,7 +252,7 @@
     <footer class="main-footer">
       <div class="footer-top">
         <a class="main-logo-footer">
-          <img src="#" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <p class="address-footer">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8
         +7 (812) 555-05-55</p>
@@ -286,5 +286,22 @@
         </p>
       </div>
     </footer>
+
+    <section class="modal modal-map">
+      <span class="modal-close">x</span>
+    </section>
+
+    <section class="modal modal-login">
+      <form action="#" method="post">
+        <label for="your-name">Ваше имя:</label>
+        <input type="text" id="your-name" name="name" placeholder="Представьтесь, пожалуйста">
+        <label for="your-email">Ваш e-mail:</label>
+        <input type="email" id="your-email" name="e-mail" placeholder="Для отправки ответа">
+        <p>Текст письма:</p>
+        <p><textarea placeholder="В свободной форме"></textarea></p>
+        <p><input type="submit" value="Отправить"></p>
+        <span class="modal-close">x</span>
+      </form>
+    </section>
   </body>
 </html>
