правки базовой стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -58,12 +58,12 @@
       </ul>
 
       <div class="perforators-background">
-        <h2>Перфораторы</h2>
+        <h2 class="title-second">Перфораторы</h2>
       </div>  
       <section class="catalog">
         <div class="catalog-sidebar">
           <p class="sidebar-title">Фильтр:</p>
-          <h2 class="visually-hidden">Фильтр товаров</h2>
+          <h2 class="visually-hidden title-second">Фильтр товаров</h2>
           <form class="catalog-filter" action="#" method="post">
             <section class="cost-range">
               <p class="filter-title">Цена:</p>
@@ -126,7 +126,7 @@
         <div class="catalog-content">
           <div class="catalog-sorting">
             <p class="sorting">Сортировка:</p>
-            <h2 class="visually-hidden">Сортировка товаров</h2>
+            <h2 class="visually-hidden title-second">Сортировка товаров</h2>
             <a class="sorting-links price active" href="#">По цене</a>
             <a class="sorting-links type" href="#">По типу</a>
             <a class="sorting-links functional" href="#">По функционалу</a>
@@ -137,7 +137,7 @@
           </div>
 
           <div class="products-list">
-          <h2 class="visually-hidden">Список товаров</h2>
+          <h2 class="visually-hidden title-second">Список товаров</h2>
             <article class="product">
               <div class="product-image">
                 <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -263,7 +263,7 @@
       </section>
       
       <section class="catalog-about-us">
-        <h2>Пара слов о перфораторах</h2>
+        <h2 class="title-second">Пара слов о перфораторах</h2>
         <p class="company-contacts-description">Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br> 
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповёрта и отбойного молотка. В ассортиментном ряду есть выбор "трёхрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>   
       </section>
@@ -320,7 +320,7 @@
     </footer>
 
     <section class="modal modal-cart">
-      <h2 class="visually-hidden">Добавление товаров в корзину</h2>
+      <h2 class="visually-hidden title-second">Добавление товаров в корзину</h2>
       <div class="modal-cart-icon"></div>
       <p class="modal-cart-description">Товар добавлен в корзину!</p>
       <div class="modal-cart-btn">
