--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <section class="popular-goods">
         <div class="popular">
-          <h2>Популярные товары:</h2>
+          <h2 class="title-second">Популярные товары:</h2>
           <a class="btn popular-btn" href="#">Все популярные товары</a>
         </div>
 
@@ -159,7 +159,7 @@
 
       <section class="popular-producers">
         <div class="popular">
-          <h2>Популярные производители:</h2>
+          <h2 class="title-second">Популярные производители:</h2>
           <a class="btn popular-btn" href="#">Все производители</a>
         </div>
         <article class="producers">
@@ -191,7 +191,7 @@
       </section>
 
       <section class="service">
-        <h2>Сервисы</h2>
+        <h2 class="title-second">Сервисы</h2>
         <p class="service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="service-slider">
           <input type="radio" id="service-btn-1" name="toggle" checked>
@@ -230,7 +230,7 @@
 
       <div class="company-contacts">
         <section class="about-us">
-          <h2>Компания «ТЕХНОМАРТ»</h2>
+          <h2 class="title-second">Компания «ТЕХНОМАРТ»</h2>
           <p class="company-contacts-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
           <p class="company-contacts-description">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivery-companies">
@@ -242,7 +242,7 @@
         </section>
 
         <section class="contacts">
-          <h2>Контакты</h2>
+          <h2 class="title-second">Контакты</h2>
           <p class="company-contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
           <div class="map-img">
             <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
@@ -303,13 +303,13 @@
     </footer>
 
     <section class="modal modal-map">
-      <h2 class="visually-hidden">Как нас найти</h2>
+      <h2 class="visually-hidden title-second">Как нас найти</h2>
       <img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
       <button class="modal-map-close" type="button">Закрыть</button>
     </section>
 
     <section class="modal modal-login">
-      <h2 class="visually-hidden">Форма обратной связи</h2>
+      <h2 class="visually-hidden title-second">Форма обратной связи</h2>
       <form action="#" method="post">
         <label for="your-name">Ваше имя:</label>
         <input type="text" id="your-name" name="name" placeholder="Имя Фамилия">
