хедер, футер главной

--- a/index.html
+++ b/index.html
@@ -268,11 +268,9 @@
 
     <footer class="main-footer">
       <div class="footer-top">
-        <div class="footer-wrapper">
+        <div class="container footer-wrapper">
           <div class="footer-contact-left">
-            <a class="main-logo-footer">
-              <img src="img/footer-logo.svg" width="220" height="68" alt="логотип интернет-магазина «Техномарт»">
-            </a>
+            <a class="logo-footer" href="index.html">Техномарт</a>
             <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             +7 (812) 555-05-55</p>
           </div>
@@ -299,7 +297,7 @@
       </div> 
 
       <div class="footer-bottom">
-        <div class="footer-wrapper">
+        <div class="container footer-wrapper">
           <p class="footer-contacts copyright">&copy; 2010–2019 Компания «Техномарт» Все права защищены</p>
           <div class="footer-social">
             <ul>
@@ -339,13 +337,13 @@
       </div>
     </footer>
 
-    <section class="modal modal-map">
+    <section class="modal modal-map visually-hidden">
       <h2 class="visually-hidden title-second">Как нас найти</h2>
       <img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
       <button class="modal-map-close" type="button">Закрыть</button>
     </section>
 
-    <section class="modal modal-login">
+    <section class="modal modal-login visually-hidden">
       <h2 class="visually-hidden title-second">Форма обратной связи</h2>
       <form action="#" method="post">
         <label for="your-name">Ваше имя:</label>
