популярные твары перед тем как попробовать код из демо

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="promo-btn" href="#">На любой вкус</a>
             </div>
             <div class="promo-block promo-block-tools">
-              <p class="promo-block-title">Инструменты</p>
+              <p class="promo-block-title">Инструмент</p>
               <a class="promo-btn" href="#">На все случаи</a>
             </div>
             <div class="promo-block promo-block-technics">
