главная страница с недочетами

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&subset=latin,cyrillic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -77,20 +76,20 @@
                 <label for="promo-btn-2"></label>
               </div>
               <div class="promo-slider-inner">
-                <div class="promo-slider-slides">
+                <!--<div class="promo-slider-slides">-->
                   <div class="promo-slide-first">
                     <p class="promo-slider-title">Перфораторы</p>
                     <span class="promo-slider-description">Настоящие мужские игрушки</span>
-                    <img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">
+                    <!--<img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">-->
                     <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
                   </div>
                   <div class="promo-slide-second">
                     <p class="promo-slider-title">Дрели</p>
                     <span class="promo-slider-description">Соседям на радость!</span>
-                    <img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">
+                    <!--<img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">-->
                     <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
                   </div>  
-                </div>
+                <!--</div>-->
               </div>
             </div>
             <div class="promo-left">
@@ -209,8 +208,7 @@
                 <div class="sliders-content-guarantee">
                   <p class="service-sliders-title">Гарантия</p>
                   <p class="service-guarantee">Если купленный у нас товар поломается или заискрит,<br>
-                  а также в случае пожара, спровоцированного его возгоранием,
-                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем
+                  а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем
                   сгоревший товар на новый.<br>
                   Дом уж восстановите как-нибудь сами.</p>
                 </div>
