--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Каталог</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -383,6 +383,6 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script src="js/catalog-script.js"></script>
+    <script src="js/catalog-script-min.js"></script>
   </body>
 </html>
