logo without href

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="main-header">
       <div class="header-top">
         <div class="container header-top-wrapper">
-          <p class="logo-header">Техномарт</p>
+          <a class="logo-header">Техномарт</a>
           <form class="form-search" action="#" method="post">
             <input type="search" name="search" id="search" placeholder="Поиск:">
             <label class="search-label" for="search"></label>
